--- a/styles/home.css
+++ b/styles/home.css
@@ -16,6 +16,7 @@
   flex-direction: column;
   align-items: center;
   gap: 20px;
+  width: 100%;
 }
 
 .form .textarea {
@@ -34,4 +35,32 @@
   border-radius: 6px;
   color: white;
   cursor: pointer;
+}
+
+@media screen and (max-width: 500px) {
+  .form .textarea {
+    width: 100%;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .form .textarea {
+    height: 150px;
+  }
+}
+
+@media screen and (max-width: 370px) {
+  h2 {
+    font-size: 18px;
+  }
+
+  .form .button {
+    padding: 10px 20px;
+  }
+}
+
+@media screen and (max-width: 270px) {
+  h2 {
+    font-size: 14px;
+  }
 }
