--- a/styles/home.css
+++ b/styles/home.css
@@ -28,6 +28,41 @@
   resize: none;
 }
 
+.form .copy-textarea {
+  position: relative;
+}
+
+.form .copy-textarea textarea {
+  padding-right: 35px;
+}
+
+.copy {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  cursor: pointer;
+  position: absolute;
+  top: 10px;
+  right: 10px;
+}
+
+.btns-wrapper {
+  display: flex;
+  gap: 10px;
+}
+
+.copied {
+  font-size: 12px;
+  display: none;
+  padding: 5px;
+  border-radius: 2px;
+  background-color: white;
+}
+
+.copied.active {
+  display: inline-block;
+}
+
 .form .button {
   padding: 8px 16px;
   width: fit-content;
@@ -38,13 +73,15 @@
 }
 
 @media screen and (max-width: 500px) {
-  .form .textarea {
+  .form .textarea,
+  .form .copy-textarea {
     width: 100%;
   }
 }
 
 @media screen and (max-width: 400px) {
-  .form .textarea {
+  .form .textarea,
+  .form .copy-textarea {
     height: 150px;
   }
 }
